# app/Domain/Entities/Cliente.php
@@ -1,0 +1,14 @@
+<?php
+
+namespace App\Domain\Entities;
+
+class Cliente
+{
+    public function __construct(
+        public int $id_cliente,
+        public string $cpf,
+        public string $nome
+    ) {
+    }
+}
+
